# swagger.json
@@ -24,7 +24,9 @@
     },
     "/api/users/patients": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Get all patients",
         "description": "Roles: doctor",
         "responses": {
@@ -36,7 +38,9 @@
     },
     "/api/users/doctors": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Get all doctors",
         "description": "Roles: patient",
         "responses": {
@@ -46,9 +50,246 @@
         }
       }
     },
+    "/api/records/{patientId}/consultation": {
+      "post": {
+        "tags": [
+          "Consultations"
+        ],
+        "summary": "Create a new consultation record",
+        "description": "Roles: doctor",
+        "parameters": [
+          {
+            "name": "patientId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "doctorId": {
+                    "example": "any"
+                  },
+                  "patientId": {
+                    "example": "any"
+                  },
+                  "date": {
+                    "example": "any"
+                  },
+                  "status": {
+                    "example": "any"
+                  },
+                  "typeofvisit": {
+                    "example": "any"
+                  },
+                  "motive": {
+                    "example": "any"
+                  },
+                  "symptoms": {
+                    "example": "any"
+                  },
+                  "severity": {
+                    "example": "any"
+                  },
+                  "followUpDate": {
+                    "example": "any"
+                  },
+                  "diagnosis": {
+                    "example": "any"
+                  },
+                  "treatmentPlan": {
+                    "example": "any"
+                  },
+                  "notes": {
+                    "example": "any"
+                  },
+                  "bloodPressure": {
+                    "example": "any"
+                  },
+                  "heartRate": {
+                    "example": "any"
+                  },
+                  "respiratoryRate": {
+                    "example": "any"
+                  },
+                  "temperature": {
+                    "example": "any"
+                  },
+                  "weight": {
+                    "example": "any"
+                  },
+                  "systemReview": {
+                    "example": "any"
+                  },
+                  "additionalTests": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/records/{patientId}/consultation/{id}": {
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "patientId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "patientId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/records/{patientId}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "patientId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/auth/me": {
       "get": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Get the current logged-in user details",
         "description": "Roles: doctor, patient",
         "responses": {
@@ -74,7 +315,9 @@
     },
     "/api/auth/signin": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Register a new user (doctor or patient)",
         "description": "Roles: doctor, patient",
         "responses": {
@@ -121,7 +364,9 @@
     },
     "/api/auth/login": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Login a user (doctor or patient) and return a refresh token",
         "description": "Roles: doctor, patient",
         "responses": {
@@ -159,7 +404,9 @@
     },
     "/api/auth/logout": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Logout the current user by invalidating their refresh token",
         "description": "Roles: doctor, patient",
         "responses": {
@@ -185,7 +432,9 @@
     },
     "/api/auth/refresh-token": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Refresh access token using a valid refresh token",
         "description": "Roles: doctor, patient",
         "responses": {
@@ -220,7 +469,9 @@
     },
     "/api/auth/request-otp": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Request a One-Time Password (OTP) for phone verification",
         "description": "Roles: doctor, patient",
         "responses": {
@@ -255,7 +506,9 @@
     },
     "/api/auth/verify-otp": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Verify a One-Time Password (OTP) for phone verification",
         "description": "Roles: doctor, patient",
         "responses": {
@@ -293,7 +546,9 @@
     },
     "/api/access/request": {
       "post": {
-        "tags": ["Access"],
+        "tags": [
+          "Access"
+        ],
         "summary": "Doctor sends access request to a patient",
         "description": "Roles: patient",
         "responses": {
@@ -325,7 +580,9 @@
     },
     "/api/access/patient/requests": {
       "get": {
-        "tags": ["Access"],
+        "tags": [
+          "Access"
+        ],
         "summary": "Patient sees pending access requests",
         "description": "Roles: patient",
         "responses": {
@@ -340,7 +597,9 @@
     },
     "/api/access/{id}/respond": {
       "put": {
-        "tags": ["Access"],
+        "tags": [
+          "Access"
+        ],
         "summary": "Patient approves or rejects an access request",
         "description": "Roles: patient",
         "parameters": [
@@ -388,7 +647,9 @@
     },
     "/api/access/doctor/patients": {
       "get": {
-        "tags": ["Access"],
+        "tags": [
+          "Access"
+        ],
         "summary": "Doctor sees approved patients",
         "description": "Roles: doctor",
         "responses": {
@@ -403,7 +664,9 @@
     },
     "/api/access/patient/doctors": {
       "get": {
-        "tags": ["Access"],
+        "tags": [
+          "Access"
+        ],
         "summary": "Patient sees approved doctors",
         "description": "Roles: patient",
         "responses": {
@@ -418,7 +681,9 @@
     },
     "/api/access/{id}": {
       "delete": {
-        "tags": ["Access"],
+        "tags": [
+          "Access"
+        ],
         "summary": "Patient removes a doctor (deletes access)",
         "description": "Roles: patient",
         "parameters": [
